examples/test/testpolicy4309.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4309
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key21: value14
      key24: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value20
          key41: value39
      podSelector:
        matchLabels:
          key44: value4
          key11: value49
          key30: value22
